@@ -7,7 +7,7 @@ import os
 from pypet import pypetconstants
 from pypet.environment import Environment
 from pypet.tests.integration.environment_test import EnvironmentTest, ResultSortTest,\
-    TestOtherHDF5Settings2
+    TestOtherHDF5Settings2, multiply
 from pypet.tests.testutils.ioutils import run_suite,make_temp_dir, make_trajectory_name, \
      parse_args, get_log_config, unittest
 from pypet.tests.testutils.data import create_param_dict, add_params
@@ -199,6 +199,12 @@ class MultiprocFrozenPoolLockTest(EnvironmentTest):
         self.use_pool=True
 
 
+def new_multiply(traj):
+    if traj.v_full_copy:
+        raise RuntimeError('Full copy should be FALSE!')
+    return multiply(traj)
+
+
 class MultiprocFrozenPoolSortQueueTest(ResultSortTest):
 
     tags = 'integration', 'hdf5', 'environment', 'multiproc', 'queue', 'pool', 'freeze_input'
@@ -210,6 +216,27 @@ class MultiprocFrozenPoolSortQueueTest(ResultSortTest):
         self.freeze_pool_input = True
         self.ncores = 3
         self.use_pool=True
+
+    def test_if_full_copy_is_old_value(self):
+
+        ###Explore
+        self.explore(self.traj)
+
+        self.traj.v_full_copy = False
+
+        self.env.f_run(new_multiply)
+        traj = self.traj
+        self.assertTrue(len(traj) == len(compat.listvalues(self.explore_dict)[0]))
+
+        self.traj.f_load_skeleton()
+        self.traj.f_load_items(self.traj.f_to_dict().keys(), only_empties=True)
+        self.check_if_z_is_correct(traj)
+
+        newtraj = self.load_trajectory(trajectory_name=self.traj.v_name,as_new=False)
+        self.traj.f_load_skeleton()
+        self.traj.f_load_items(self.traj.f_to_dict().keys(), only_empties=True)
+
+        self.compare_trajectories(self.traj,newtraj)
 
 
 class MultiprocFrozenPoolPipeTest(EnvironmentTest):
